--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hackthedev/dsync-auth": "^1.0.7",
     "@hackthedev/dsync-sign": "^1.0.10",
     "archiver": "^7.0.1",
+    "bcrypt": "^6.0.0",
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.7",
     "crypto": "^1.0.1",
