--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@hackthedev/arraytools": "^1.0.0",
     "@hackthedev/dsync": "^1.0.8",
     "@hackthedev/dsync-auth": "^1.0.7",
+    "@hackthedev/dsync-files": "^1.0.0",
     "@hackthedev/dsync-ipsec": "^1.0.1",
+    "@hackthedev/dsync-ratelimit": "^1.0.1",
     "@hackthedev/dsync-sign": "^1.0.10",
-    "@hackthedev/dsync-sql": "1.0.3",
+    "@hackthedev/dsync-sql": "^1.0.6",
     "@hackthedev/terminal-logger": "^1.0.0",
     "archiver": "^7.0.1",
     "bcrypt": "^6.0.0",
