--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jsonwebtoken": "^9.0.3",
     "livekit-server-sdk": "^2.15.0",
     "multer": "^2.0.2",
+    "node-fetch": "^3.3.2",
     "sanitize-html": "^2.17.0",
     "socket.io": "^4.8.3",
     "sqlstring": "^2.3.3",
