--- a/livekit/Dockerfile
+++ b/livekit/Dockerfile
@@ -5,5 +5,6 @@ RUN apk add --no-cache yq
 
 COPY entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
+RUN sed -i 's/\r$//' /entrypoint.sh && chmod +x /entrypoint.sh
 
 ENTRYPOINT ["/entrypoint.sh"]
